Donations, Adopt Info and Difference screens

--- a/index.html
+++ b/index.html
@@ -83,6 +83,127 @@
         <button class="botao-carrosel" id="botao-proximo"> &gt; </button>
     </div> 
 
+    <div class="donations-screen"> 
+        <div class="donations-title"> 
+            <h1> With your donations we provide </h1>
+        </div>
+
+        <div class="donations-elements">
+            <div class="donations-element">
+                <h1>Shelter</h1> <img src="imagens/shelter-icon.svg" class="donations-icons">
+
+                <p>
+                   We provide shelter for many of our cats and dogs. In addition to a roof over their heads, we pay for heat, food, water, and electricity, and general maintenance.
+                </p>
+            </div>
+
+            <div class="donations-element"> 
+                <h1>Vetting</h1> <img src="imagens/vetting-icon.svg" style="height: 35px;">
+
+                <p>
+                    We provide vet care to our cats and dogs. We take care of general health assessments medications, vaccinations, spay/neuter procedures, and other surgeries.
+                </p>
+            </div>
+
+            <div class="donations-element">
+                <h1>Facilities</h1> <img src="imagens/facilities-icon.svg" class="donations-icons">
+
+                <p>
+                   We currently utilize a facility in a dilapidated state, which has necessitated significant investments to make it usable again. We are still restoring the building to its full potential.
+                </p>
+            </div>
+
+            <div class="donations-element">
+                <h1>Transport</h1> <img src="imagens/transport-icon.svg" class="donations-icons">
+
+                <p>
+                    Each year, we transport over 600 dogs and 350 cats from kill shelters and emergency distressing situations to hospitals or our shelter, providing them with a second chance at life.
+                </p>
+            </div>
+
+            <div class="donations-element">
+                <h1>Fosters</h1> <img src="imagens/fosters-icon.svg" class="donations-icons">
+
+                <p>
+                    We’re lucky to have a group of individuals who generously foster our cats and dogs in their homes. We cover all their veterinary needs and provide necessary food supplies.
+                </p>
+            </div>
+
+            <div class="donations-element">
+                <h1>Food</h1> <img src="imagens/food-icon.svg" style="height: 23px;">
+
+                <p>
+                    Each year, we nourish our  cats and dogs with over 2,200 cans of wet food and 1,600 pounds of dry food to ensure their well-being and keep them content and thriving.
+                </p>
+            </div>
+        </div>
+</div> 
+
+<div class="adopt-info-screen">
+          <div class="adopt-info-screen-title"> 
+               <h1>Adoption information</h1>
+          </div>
+
+        <div class="adopt-content">
+              <div class="adopt-info-screen-img">
+                     <img src="imagens/adoption.png">
+              </div>
+
+              <div class="adopt-info-screen-text">
+                     <h1>Applicants must:</h1>
+                         <ul>
+                             <li>Live within a 90 mile radius of our shelter</li>
+                             <li>Accept the financial responsibility of vet care and pet care</li>
+                             <li>Donate $400 to adopt their dog/puppy; $125 for a cat; $150 for a kitten</li>
+                             <li>Be over 23 years of age to adopt a dog and 21 years of age to adopt a cat</li>
+                             <li>Be ready to adopt within 7-10 days</li>
+                         </ul>
+                     <button id="adopt-button2">Apply to Adopt</button>
+              </div>
+       </div>
+</div> 
+
+<div class="difference-screen">        
+           <div class="difference-screen-title">
+                <h1>How you can make a difference</h1>
+           </div>
+
+           <img src="imagens/difference-icon.svg" style="margin-left: 10vw;">
+           <img src="imagens/difference2-icon.svg" style="margin-left: 70vw;">
+
+           <div class="difference-elements">
+
+                <div class="difference-element">
+                     <h1>Adopt or Foster</h1>
+                     <p>Provide a forever or temporary home to a homeless animal.</p>
+
+                    <button id="difference-button-adopt-foster" class="difference-buttons">View Adoptables</button>
+                </div>
+
+                <div class="difference-element">
+                     <h1>Volunteer</h1>
+                     <p>We are always in need of passionate and friendly volunteers.</p>
+
+                     <button id="difference-button-volunteer" class="difference-buttons">Get Involved</button>
+                </div>
+
+                <div class="difference-element">
+                     <h1>Donate Monthly</h1>
+                     <p>Regular donations is a reliable stream of funds to help sustain.</p>
+
+                    <button id="difference-button-donate" class="difference-buttons">Give Monthly</button>
+                </div>
+
+                <div class="difference-element">
+                    <h1>Start a Fundraiser</h1>
+                    <p>Start a fundraiser to raise funds and help us continue our mission.</p>
+
+                    <button id="difference-button-fundraiser" class="difference-buttons">Learn More</button>
+                </div>
+
+            </div>
+</div>
+
 <script src="script.js"> </script>
 
 </body>
