Best friend screen, Subscribe screen and Footer

--- a/index.html
+++ b/index.html
@@ -204,6 +204,96 @@
             </div>
 </div>
 
+<div class="best-friend-screen"> 
+    <div class="best-friend-title">
+         <h1>Find your <span class="destaque">best friend</span> today!</h1>
+    </div>
+
+    <img src="imagens/best-friend-icon.svg" style="margin-left: 18vw; height: 50px;">
+    <img src="imagens/best-friend-icon2.svg"  class="osso-icon" style="margin-left: 53vw; height: 40px;">
+    
+
+    <div class="best-friend-container">
+         <div class="best-friend-content">
+              <img src="imagens/best-cat.png" style="margin-top: 0.9vh; margin-left: 10vh;">
+         </div>
+
+         <div class="best-friend-content">
+              <h1>Browse our adorable adoptables</h1>
+
+              <button id="best-friend-button-view" class="best-friend-buttons">View Adoptables</button>
+              <button id="best-friend-button-adopt" class="best-friend-buttons">Apply to Adopt</button>
+         </div>
+
+         <div class="best-friend-content">
+              <img src="imagens/best-pug.png" style="margin-left: 15vh; margin-top: 1.3vh;">
+         </div>
+    </div>
+</div>
+
+<div class="subscribe-screen">
+   <div class="subscribe-screen-title">
+        <h1>Subscribe to our newsletter</h1>
+
+        <p>
+           for updates on shelter events, fundraising parties, and heartwarming stories
+           of animals finding their forever homes.
+       </p>
+  </div>
+
+  <div class="subscribe-screen-buttons">
+       <input type="email" placeholder="Enter your email" class="email-input">
+       <button id="subscribe-button" class="subscribe-btn">Subscribe</button>
+  </div>     
+</div>
+
+<footer>
+<div class="footer-container">
+   <div class="footer-logo">
+        <img src="imagens/logo.png" class="logo">
+
+        <h1>FOREVER <br>HOMES<img src="imagens/coracao-icon.svg" style="width: 27px; padding-left: 1.5vh;"></h1>
+        <p>Helps Save Lives</p>
+   </div>
+
+   <div class="footer-links">
+        <div class="column">
+             <a href="#">Adopt a Pet</a>
+             <a href="#">Adoptable Dogs</a>
+             <a href="#">Adoptable Cats</a>
+             <a href="#">Become a Foster</a>
+             <a href="#">Rescue Center</a>
+             <a href="#">Get Involved</a>
+        </div>
+
+        <div class="column">
+             <a href="#">Ways to Donate</a>
+             <a href="#">Upcoming Events</a>
+             <a href="#">Outreach Programs</a>
+             <a href="#">Who We Are</a>
+             <a href="#">Contact Us</a>
+             <a href="#">Shop With Purpose</a>
+        </div>
+</div>
+
+<div class="footer-contact">
+  <p><img src="imagens/loc-icon.svg" style="padding-right: 1.8vh;"> PO Box 83644 Middleton, 2452 Wilson</p>
+  <p><img src="imagens/tel-icon.svg" style="padding-right: 1.5vh;"> 631-249-7325</p>
+  <p><img src="imagens/email-icon.svg" style="padding-right: 1.4vh;"> pet_home@gmail.com</p>
+  
+  <div class="social-icons">
+      <a href="#"><img src="imagens/x-icon.svg" alt="Twitter"></a>
+      <a href="#"><img src="imagens/whats-icon.svg" alt="WhatsApp"></a>
+      <a href="#"><img src="imagens/insta-icon.svg" alt="Instagram"></a>
+  </div>
+</div>          
+</footer>
+
+<div class="footer-bottom">
+<p>We are not just a rescue, <span>we are a refuge</span></p>
+</div>
+</div>
+
 <script src="script.js"> </script>
 
 </body>
