Carrosel and Success Page

--- a/success.html
+++ b/success.html
@@ -26,8 +26,9 @@
             </ul>
         </nav>
 
+        <button id="cancel-button3"><img src="imagens/back-icon.svg" style="margin-right: 12px;">Back</button>
+
         <div class="success-container">
-             <button><img src="imagens/back-icon.svg" style="margin-right: 12px;">Back</button>
              <h2>Success!</h2>
 
              <p>Free your creativity and create a beautiful success <br> page to thank your user for subscribing/donating <br> to our project.</p>
