--- a/success.html
+++ b/success.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <div class="wrapper">
 
+    <div class="wrapper">
         <nav>
             <ul class="nav-links"> 
                 <img src="imagens/logo.png">
@@ -35,6 +35,8 @@
         </div>
 
     </div>
+
+<script src="script.js"></script>
 </body>
 
 </html>
